<?xml version="1.0"?>
<package format="2">
  <name>telemetry</name>
  <version>0.0.0</version>
  <description>Package for interfacing select ROSflight and ROSplane messages over MAVLink</description>

  <maintainer email="TODO@TODO.com">TODO</maintainer>

  <author email="daniel.p.koch@gmail.com">Daniel Koch</author>
  <author email="superjax08@gmail.com">James Jackson</author>

  <license>TODO</license>

  <url type="repository">TODO</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rosflight_msgs</depend>
  <depend>rosplane_msgs</depend>

  <depend>boost</depend>
  <depend>yaml-cpp</depend>

  <build_depend>git</build_depend>
  <build_depend>pkg-config</build_depend>

  <export>
  </export>
</package>
